erDiagram
  tipos_tarefa {
    uuid    id PK
    text    nome UK
    text    categoria
    boolean e_quantitativa
    boolean exige_lote
    boolean exige_especie
    boolean exige_recipiente
    boolean exige_area
    text    unidade_medida
    boolean ativo
  }
  protocolos {
    uuid    id PK
    uuid    recipiente_id FK
    text    nome
    boolean ativo
    text    observacoes
    uuid    criado_por FK
  }
  protocolos_etapas {
    uuid    id PK
    uuid    protocolo_id FK
    uuid    tipo_tarefa_id FK
    text    rotulo
    int     posicao
    text    tipo_agendamento
    text    tipo_ancora
    uuid    etapa_ancora_id FK
    int     dias
    int     intervalo_dias
    uuid    turno_id FK
    boolean alerta_ligado
    numeric janela_aviso_pct
    text    fase_resultante
    boolean ativo
  }
  especies_protocolos_tempos {
    uuid especie_id PK
    uuid protocolo_etapa_id PK
    int  dias
    int  intervalo_dias
    text observacoes
  }
  recipientes {}
  especies {}
  atribuicoes {}
  lotes_etapas {}

  recipientes ||--o| protocolos        : "define o manejo de"
  protocolos  ||--o{ protocolos_etapas : "compoe-se de"
  protocolos_etapas ||--o{ protocolos_etapas : "e ancora de"
  tipos_tarefa ||--o{ protocolos_etapas : "e executada em"
  tipos_tarefa ||--o{ atribuicoes       : "classifica"
  especies    ||--o{ especies_protocolos_tempos : "customiza o tempo de"
  protocolos_etapas ||--o{ especies_protocolos_tempos : "tem tempo sobrescrito em"
  protocolos_etapas ||--o{ lotes_etapas : "materializa-se em"
